[tool.poetry]
name = "ai-spider"
version = "0.1.0"
description = "ai-worker coordination hub and inference endpoint provider"
authors = ["erik aronesty <erik@q32.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
websockets = "^11.0.3"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ruff = "^0.0.288"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
